syntax = "proto3";
package meesign;

enum ProtocolType {
  GG18 = 0;
  ELGAMAL = 1;
  FROST = 2;
}

message ProtocolGroupInit {
  ProtocolType protocol_type = 1;
  uint32 index = 2;
  uint32 parties = 3;
  uint32 threshold = 4;
}

message ProtocolInit {
  ProtocolType protocol_type = 1;
  repeated uint32 indices = 2;
  uint32 index = 3;
  bytes data = 4;
}

message ClientMessage {
  ProtocolType protocol_type = 1;
  map<uint32, bytes> unicasts = 2;
  optional bytes broadcast = 3;
}

message ServerMessage {
  ProtocolType protocol_type = 1;
  map<uint32, bytes> unicasts = 2;
  map<uint32, bytes> broadcasts = 3;
}

message SignedMessage {
    bytes message = 1;
    bytes signature = 2;
}
